# agptools

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  README.md  agp.py  agptools  assemble.py  bed.py  break_contigs.py  compose.py  flip.py  index.html  join.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.cfg  setup.py  split.py  transform.py
.github/workflows/: mkdocs.yml  python-package.yml  python-publish.yml
agp/: __init__.py  agptools.py  assemble.py  bed.py  break_contigs.py  compose.py  fasta.py  flip.py  join.py  remove.py  rename.py  sanitize.py  split.py  transform.py
api/: index.html
commands/: index.html
docs/: api.md  commands.md  index.md  requirements.txt
reports/coverage/: d_e72717c2691fe9f6___init___py.html  d_e72717c2691fe9f6_agptools_py.html  d_e72717c2691fe9f6_assemble_py.html  d_e72717c2691fe9f6_bed_py.html  d_e72717c2691fe9f6_flip_py.html  d_e72717c2691fe9f6_join_py.html  d_e72717c2691fe9f6_remove_py.html  d_e72717c2691fe9f6_rename_py.html  d_e72717c2691fe9f6_split_py.html  d_e72717c2691fe9f6_transform_py.html  index.html  status.json
reports/junit/: junit.xml
test/: flips.txt  input_breaks  test.agp
tests/: test_agp.py  test_assemble.py  test_bed.py  test_flip.py  test_join.py  test_remove.py  test_rename.py  test_sanitize.py  test_split.py  test_transform.py
tests/data/: assemble_out.fa  empty.agp  flips.txt  renamed_1.agp  renamed_2.agp  renamed_3.agp  sanitize_out.agp  sanitize_out.fa  scaffolds_to_remove.txt  test.agp  test.bed  test_breaks1.tsv  test_breaks2.tsv  test_flip_out.agp  test_join_1.agp  test_join_2.agp  test_join_3.agp  test_sanitize.agp  test_sanitize.fa  test_split.agp  test_split1.agp  test_split2.agp  test_transform.agp  test_transform.bed  transformed.bed
