[project]
name = "bio_agptools"
version = "0.0.3"
authors = [
  { name="Edward S. Ricemeyer", email="edward.ricemeyer@gmail.com" },
]
description = "Tools for working with agp files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["screed", "pyfaidx"]

[project.optional-dependencies]
dev = ["bumpver", "pip-tools", "mypy", "ruff"]
test = ["pytest", "pytest-cov", "pytest-html", "genbadge[all]", "mypy", "ruff"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python", "pygments"]

[project.scripts]
agptools = "agp.agptools:main"

[project.urls]
Homepage = "https://github.com/WarrenLab/agptools"
Issues = "https://github.com/WarrenLab/agptools/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
packages = ["agp"]
