[metadata]
name = agptools
version = 0.0.1

[options]
packages = find: 
install_requires =
    screed

[options.extras_require]
test = pytest
bio = biopython
devel =
    flake8
    mypy
    black

[options.entry_points]
console_scripts =
    agptools = agp.agptools:main
    break_contigs = agp.break_contigs:main [bio]

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88
extend-ignore = E203
