[metadata]
name = agptools
version = 0.0.1

[options]
packages = find: 
install_requires =
    screed
    pyfaidx
python_requires = >=3.7

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-html
    genbadge[all]
bio = biopython
devel =
    flake8
    mypy
    black
    isort
docs =
    mkdocs
    mkdocs-material
    mkdocstrings
    mkdocstrings-python
    pygments

[options.entry_points]
console_scripts =
    agptools = agp.agptools:main
    break_contigs = agp.break_contigs:main [bio]

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88
extend-ignore = E203
